manifests/harbor/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"harbor-allow-all","namespace":"harbor"},"spec":{"egress":[{}],"ingress":[{}],"podSelector":{},"policyTypes":["Ingress","Egress"]}}
  creationTimestamp: "2025-11-10T02:41:03Z"
  generation: 1
  name: harbor-allow-all
  namespace: harbor
  resourceVersion: "54539"
  uid: 9ada817f-bbe3-4c27-a4da-caadbc561e84
spec:
  egress:
  - {}
  ingress:
  - {}
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
